attempted to fix alignment.

--- a/book-club/styles/style.css
+++ b/book-club/styles/style.css
@@ -13,15 +13,15 @@ body{
 }
 
 #heading{
-    grid-column: 1/2;
+    grid-column: 1/3;
     grid-row: 1/2;
     font-family: "Italianno", Lato;
-    font-size: 3em;
+    font-size: 4em;
     text-align: center;
 }
 
 #blurb1{
-    grid-column: 1/2;
+    grid-column: 1/3;
     grid-row: 2/3;
     font-family: Oswald;
 }
